# uzumaki

./: .gitignore  .oxlintrc.json  .prettierignore  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  LICENSE-MIT  README.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/template/: package.json  tsconfig.json  uzumaki.config.json
crates/media_napi/: Cargo.toml
crates/media_napi/src/: lib.rs
crates/refineable/: Cargo.toml  LICENSE-APACHE
crates/refineable/derive_refineable/: Cargo.toml
crates/usumaki_core/: tsconfig.json
crates/usumaki_core/js/: cli.ts  index.ts  main.ts
crates/usumaki_core/js/react/: index.ts
crates/usumaki_core/js/react/jsx/: runtime.ts
crates/usumaki_core/src/: lib.rs  window.rs
crates/uzumaki/: Cargo.toml  README.md  build.rs  package.json  tsconfig.json
crates/uzumaki/cli/: main.ts
crates/uzumaki/core/: 00_init.js  runtime.js
crates/uzumaki/js/: constants.ts  core.ts  events.ts  index.ts  media.ts  plugins.ts  theme.ts  types.ts  utils.ts  window.ts
crates/uzumaki/js/elements/: base.ts  checkbox.ts  element.ts  image.ts  index.ts  input.ts  text.ts  view.ts
crates/uzumaki/js/react/: reconciler.ts  useInput.ts
crates/uzumaki/js/react/jsx/: types.ts
crates/uzumaki/src/: app.rs  cursor.rs  element.rs  event_dispatch.rs  input.rs  interactivity.rs  lib.rs  main.rs  ops.rs  plugin.rs  prop_keys.rs  selection.rs  style.rs  text.rs  ui.rs  window.rs
crates/uzumaki/src/element/: checkbox.rs  image.rs  input.rs  render.rs  selection.rs  svg.rs  text.rs  view.rs
crates/uzumaki/src/elements/: input.rs
crates/uzumaki/src/ops/: dom.rs  image.rs  plugin.rs  style.rs  style_util.rs  window.rs
crates/uzumaki/src/runtime/: ts.rs
crates/uzumaki_core/: .gitignore  Cargo.toml  package.json
crates/uzumaki_core/js/: cli.ts  events.ts  index.ts  window.ts
crates/uzumaki_core/js/react/: reconciler.ts  useInput.ts
crates/uzumaki_core/js/react/jsx/: runtime.ts
crates/uzumaki_core/src/: element.rs  event_dispatch.rs  geometry.rs  gpu.rs  input.rs  lib.rs  style.rs  text.rs  window.rs
crates/uzumaki_core/src/elements/: input.rs  mod.rs  text.rs  view.rs
docs/: astro.config.mjs
docs/public/: install.ps1  install.sh
docs/src/components/: Footer.astro
docs/src/content/docs/: index.mdx
docs/src/content/docs/guides/: building.md  installation.md  quick-start.md
docs/src/content/docs/reference/: elements.md  props.md  window.md
docs/src/styles/: custom.css
scripts/: copy-artifacts.ts
