[workspace]
resolver = "2"
members = [ "crates/uzumaki", "crates/refineable"]

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]
refineable = { path = "./crates/refineable" }
quote = "1.0.45"
syn = "2.0.117"
proc-macro2 = "1.0.106"
parking_lot = "0.12.5"
pollster = "0.4.0"
anyhow = "1.0.102"
tsify = "0.5.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
deno_runtime = "0.249.0"
deno_core = "0.394.0"


# [profile.release]
# lto = "thin"
# strip = "symbols"

[profile.dist]
inherits = "release"
lto = true
strip = "symbols"
