[workspace]
resolver = "2"
members = [ "crates/uzumaki", "crates/cli", "crates/refineable", "crates/media_napi"]


[workspace.package]
publish = false
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
refineable = { path = "./crates/refineable" }
quote = "1.0.45"
syn = "2.0.117"
proc-macro2 = "1.0.106"
parking_lot = "0.12.5"
pollster = "0.4.0"
anyhow = "1.0.102"
tsify = "0.5.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
deno_runtime = "0.249.0"
deno_core = "0.394.0"
clap = { version = "4", features = ["derive", "color"] }
ureq = "3"
zip = { version = "2", default-features = false, features = ["deflate"] }
tempfile = "3"
dirs = "6"
tokio = "1"


[profile.dist]
inherits = "release"
codegen-units = 1
lto = true
opt-level = "z"
strip = "symbols"
split-debuginfo = "packed"
