[package]
name = "uzumaki"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "uzumaki"
path = "src/main.rs"

[build-dependencies]
uzumaki_runtime = { path = "../uzumaki", features = ["snapshot"] }
# https://github.com/denoland/deno/discussions/32444#discussioncomment-15993969
winapi = { version = "=0.3.9", features = ["std"]}

[dependencies]
uzumaki_runtime = { path = "../uzumaki" }
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
ureq.workspace = true
zip.workspace = true
tempfile.workspace = true
libsui = "0.14"
dirs.workspace = true
