[package]
name = "uzumaki_media_napi"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = []
ffmpeg-backend = ["dep:ffmpeg-next"]

[dependencies]
napi = { version = "2.16.17", default-features = false, features = ["napi8"] }
napi-derive = "2.16.13"
ffmpeg-next = { version = "7.1.0", optional = true, features = ["build"] }
