[package]
name = "refineable"
edition.workspace = true
version = "0.1.0"
publish = false
license.workspace = true
description = "A macro for creating 'refinement' types that can be used to partially initialize or mutate a complex struct"

[lib]
path = "src/refineable.rs"
doctest = false

[dependencies]
derive_refineable = { path = "./derive_refineable" }
