[package]
name = "uzumaki_runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "uzumaki_runtime"

[features]
snapshot = ["deno_runtime/only_snapshotted_js_sources", "deno_runtime/snapshot"]

[dependencies]
# utils
refineable.workspace = true
serde.workspace = true
serde_json.workspace = true
unicode-segmentation = "1.11"
pollster.workspace = true
anyhow.workspace = true
arboard = "3.6.1"
tokio = { workspace = true, features = ["rt", "time"] }
# Deno deps
deno_runtime = { workspace = true, features = ["include_js_files_for_snapshotting"] }
deno_core = { workspace = true, features = ["include_js_files_for_snapshotting"] }

deno_error = "=0.7.1"
deno_ast = { version = "0.53.1", features = ["transpiling", "typescript", "react", "cjs"] }
async-trait = "0.1"
rustls = { version = "=0.23.28", default-features = false, features = ["std", "aws_lc_rs"] }

# https://github.com/denoland/deno/discussions/32444#discussioncomment-15993969
winapi = { version = "=0.3.9", features = ["std"]}
sys_traits = { version = "=0.1.25", features = ["real"] }
node_resolver = "0.79.0"
deno_resolver = "0.72.0"

# Rendering
cosmic-text = "0.18.2"
slab = "0.4"
taffy = "0.9.2"
vello = "0.8.0"
wgpu = "28.0.0"
winit = "0.30.13"
