[package]
name = "uzumaki_core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.102"
cosmic-text = "0.18.2"
ctrlc = "3.5.2"
napi = "3"
napi-derive = "3"
parking_lot = "0.12.5"
pollster = "0.4.0"
slotmap = "1.1.1"
taffy = "0.9.2"
vello = "0.7.0"
wgpu = "27.0.1"
winit = "0.30.13"

[build-dependencies]
napi-build = "1"
