[package]
name = "uzumaki_core"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
refineable.workspace = true

parking_lot.workspace = true
pollster.workspace = true
anyhow.workspace = true
cosmic-text = "0.18.2"
ctrlc = "3.5.2"
napi = "3"
napi-derive = "3"
slotmap = "1.1.1"
taffy = "0.9.2"
vello = "0.7.0"
wgpu = "27.0.1"
winit = "0.30.13"

[build-dependencies]
napi-build = "1"
