[package]
name = "derive_refineable"
version = "0.1.0"
edition.workspace = true
publish = false
license.workspace = true
description = "A derive macro for creating refinement types in Rust"

[lib]
path = "src/derive_refineable.rs"
proc-macro = true
doctest = false

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
